# rdata

./: .gitignore  README.md
.github/workflows/: rust.yml
examples/: README.md  basic_query.txt  groupby_query.txt  sort_query.txt
polars-query-server/: Cargo.toml  Dockerfile  README.md
polars-query-server/.github/workflows/: ci.yml
polars-query-server/data_gen/: generate_parquet_data.py
polars-query-server/load_test/: run_load_test.py
polars-query-server/src/: api.rs  executor.rs  lib.rs  main.rs  metrics.rs  parser.rs  scheduler.rs  utils.rs
polars-query-server/tests/: integration.rs
